--- a/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/templates/login.html
+++ b/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/templates/login.html
@@ -9,6 +9,7 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <link rel="stylesheet" media="screen" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/reset.css"/>
+    <link rel="icon" href="/authserver/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 
